--- a/tweet/package.json
+++ b/tweet/package.json
@@ -9,6 +9,7 @@
     "materialize-css": "^0.100.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-pure-render": "^1.0.2",
     "react-scripts": "1.0.13"
   },
   "scripts": {
