--- a/tweet/package.json
+++ b/tweet/package.json
@@ -10,7 +10,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-pure-render": "^1.0.2",
-    "react-scripts": "1.0.13"
+    "react-scripts": "1.0.13",
+    "twitter": "^1.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
